<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.ferit.vedran.inspired.MainActivity"
    android:background="@drawable/back_blue"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/LayoutTuring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:layout_weight="1">
        <ImageView
            android:id="@+id/ivTuring"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/turing"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/DescriptionTuring" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/turing"
                android:textSize="@dimen/name_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/turing_date"
                android:textSize="@dimen/name_size"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/tvTuring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_text"
                android:paddingEnd="@dimen/text_padding_text"
                android:paddingTop="@dimen/text_padding_text"
                android:text="@string/about_turing"
                android:textColor="@color/colorText"
                android:maxLines="@integer/maxTextLines"
                android:scrollbars="vertical"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- linija -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@drawable/line">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutJobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/layout_margin"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivJobs"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/jobs"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/DescriptionJobs" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/jobs"
                android:textSize="@dimen/name_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/jobs_date"
                android:textSize="@dimen/name_size"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/tvJobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_text"
                android:paddingEnd="@dimen/text_padding_text"
                android:paddingTop="@dimen/text_padding_text"
                android:text="@string/about_jobs"
                android:textColor="@color/colorText"
                android:maxLines="@integer/maxTextLines"
                android:scrollbars="vertical"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- linija -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@drawable/line">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutGates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/layout_margin"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivGates"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/gates"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/DescriptionGates" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/gates"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/name_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_title"
                android:paddingEnd="@dimen/text_padding_title"
                android:text="@string/gates_date"
                android:textSize="@dimen/name_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvGates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding_text"
                android:paddingEnd="@dimen/text_padding_text"
                android:paddingTop="@dimen/text_padding_text"
                android:text="@string/about_gates"
                android:textColor="@color/colorText"
                android:maxLines="@integer/maxTextLines"
                android:scrollbars="vertical"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- linija -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@drawable/line">
    </LinearLayout>

</LinearLayout>

